<resources>

    <string name="app_name">苏州实时公交</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="stationName">站台,如:观前街</string>
    <string name="lineName">线路,如:117</string>
    <string name="search">搜索</string>
    <string name="queryStation">查站点</string>
    <string name="queryLine">查线路</string>
    <string name="back">返回</string>
    <string name="logout">退出</string>
    <string name="refresh">刷新</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="name_start">起点:</string>
    <string name="name_end">终点:</string>
    <string name="name_run_time">首末班时间:</string>
    <string name="name_next_bus">下趟车</string>
    <string name="name_station">站</string>
    <string name="arrive_station_time">进站时间:</string>
    <string name="name_position">位于</string>
    <string name="line_required">请输入公交线路!</string>
    <string name="station_required">请输入站台名称!</string>
    <string name="title_bustime">苏州实时公交</string>
    <string name="title_line_info">线路信息</string>
    <string name="title_line">线路查询</string>
    <string name="title_station">站台查询</string>
    <string name="title_single_line">车辆运行动态信息</string>
    <string name="title_update_version">新版本功能说明</string>
    <string name="title_favorite">收藏</string>
    <string name="title_more">更多</string>
    <string name="version_name">版本号:</string>
    <string name="search_clear">清除</string>
    <string name="update_download">更新</string>
    <string name="update_cancel">下次再说</string>
    <string name="favorite">收藏</string>
    <string name="list_bottom">底部撕边</string>
    <string name="line">公交</string>
    <string name="station">站台</string>
    <string name="detail">详细信息</string>
    <string name="change_error">纠错</string>

    <string-array name="Spinner_Content">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>

    <string name="title_activity_station_info">StationInfoActivity</string>
    <string name="title_activity_station_bus">StationBusActivity</string>
    <string name="title_activity_update_version">UpdateVersionActivity</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>