<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0px"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_relativelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg" >

        <TextView
            android:id="@+id/title_textview"
            style="@style/titlefont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_station" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/station_search_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_relativelayout"
        android:background="@drawable/search_bar_bg" >

        <EditText
            android:id="@+id/stationName"
            style="@style/stationName"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:background="@drawable/search_bar_edit_normal"
            android:hint="@string/stationName"
            android:paddingLeft="20dip"
            android:paddingRight="30dip"
            android:textSize="14.7sp" />

        <ImageView
            android:id="@+id/iv_search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="60dip"
            android:background="@drawable/btn_search_clear"
            android:contentDescription="@string/search_clear"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/search_bar_icon_normal"
            android:contentDescription="@string/search" />
    </RelativeLayout>

    <ListView
        android:id="@+id/station_info_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/station_search_layout"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="10dip"
        android:cacheColorHint="#00000000"
        android:divider="@color/white" >
    </ListView>

</RelativeLayout>