<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="0px" >

    <RelativeLayout
        android:id="@+id/top_relativelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg" >

        <Button
            android:id="@+id/back_btn"
            style="@style/titlebtnfont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.7dip"
            android:background="@drawable/btn_back"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/back" />

        <TextView
            android:id="@+id/title_textview"
            style="@style/titlefont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/change_error"
            style="@style/titlebtnfont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.7dip"
            android:background="@drawable/btn_back"
            android:text="@string/change_error" />
    </RelativeLayout>

    <ListView
        android:id="@+id/single_line_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_relativelayout"
        android:layout_marginBottom="50dip"
        android:cacheColorHint="#00000000"
        android:divider="@color/white" >
    </ListView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/tab_bottom" >

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.7dip"
            android:background="@drawable/btn_refresh"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btn_refresh"
            android:background="@drawable/btn_favorite"
            android:contentDescription="@string/favorite"
            android:src="@drawable/tab_favorite_icon" />
    </RelativeLayout>

</RelativeLayout>