<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg" >

    <RelativeLayout
        android:id="@+id/top_relativelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg" >

        <TextView
            android:id="@+id/title_textview"
            style="@style/titlefont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_update_version" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_relativelayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip" >

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_relativelayout"
            android:text="@string/version_name"
            tools:context=".UpdateVersionActivity" />

        <TextView
            android:id="@+id/app_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/version_name"
            tools:context=".UpdateVersionActivity" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_version_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_version"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip" >

        <ListView
            android:id="@+id/update_intro_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="@color/white" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_update_operate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dip"
        android:background="@drawable/search_bar_bg" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <Button
                android:id="@+id/update_download"
                style="@style/titlebtnfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_update"
                android:text="@string/update_download" />

            <Button
                android:id="@+id/update_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_toRightOf="@+id/update_download"
                android:background="@drawable/btn_next_done"
                android:text="@string/update_cancel"
                android:textColor="#4F4F4F" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>