<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#EDEDED"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical" >

    <RelativeLayout
        android:id="@+id/layout_line_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13.3dip"
        android:layout_marginTop="8dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:contentDescription="@string/line"
            android:gravity="center_horizontal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_line_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13.3dip"
        android:layout_marginTop="3.33dp"
        android:layout_toRightOf="@+id/layout_line_total" >

        <TextView
            android:id="@+id/tv_lineNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#5B9B00"
            android:gravity="center_horizontal"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/line_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_lineNumber"
            android:layout_marginTop="3.33dp"
            android:background="#226EB9"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="3.33dp"
                android:singleLine="true"
                android:text="@string/name_run_time"
                android:textColor="#E3ECF5"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_run_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_time"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@+id/tv_time"
                android:singleLine="true"
                android:textColor="#E3ECF5"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_time"
            android:layout_marginTop="3.33dp"
            android:gravity="fill_horizontal"
            android:text="@string/name_start"
            android:textColor="#50810C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_startStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_start"
            android:layout_below="@+id/line_time"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/tv_start"
            android:gravity="fill_horizontal"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_start"
            android:layout_marginBottom="3.33dp"
            android:layout_marginTop="3.33dp"
            android:gravity="fill_horizontal"
            android:text="@string/name_end"
            android:textColor="#A01818"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_endStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_end"
            android:layout_below="@+id/tv_startStation"
            android:layout_marginBottom="3.33dp"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/tv_end"
            android:gravity="fill_horizontal"
            android:textColor="#000000"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/detail"
            android:contentDescription="@string/detail" />
    </RelativeLayout>

</RelativeLayout>