<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/layout_line_total"
            android:layout_width="wrap_content"
            android:layout_height="52dip"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="13.3dip"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/tv_lineNumber"
                android:layout_width="52dip"
                android:layout_height="26dip"
                android:textColor="#666666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_lineTotalStation"
                android:layout_width="52dip"
                android:layout_height="26dip"
                android:layout_below="@+id/tv_lineNumber"
                android:textColor="#666666"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_line_detail_start"
            android:layout_width="fill_parent"
            android:layout_height="26dip"
            android:layout_marginLeft="13.3dip"
            android:layout_marginTop="5dip"
            android:layout_toRightOf="@+id/layout_line_total" >

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:text="@string/name_start"
                android:textColor="#666666"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_startStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_start"
                android:gravity="fill_horizontal"
                android:textColor="#666666"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_startStation"
                android:layout_marginTop="3.33dp"
                android:singleLine="true"
                android:text="@string/name_run_time"
                android:textColor="#999999"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/tv_run_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_time"
                android:layout_below="@+id/tv_startStation"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@+id/tv_time"
                android:singleLine="true"
                android:textColor="#999999"
                android:textSize="8sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_line_detail_end"
            android:layout_width="fill_parent"
            android:layout_height="26dip"
            android:layout_below="@+id/layout_line_detail_start"
            android:layout_marginLeft="13.3dip"
            android:layout_marginTop="5dip"
            android:layout_toRightOf="@+id/layout_line_total" >

            <TextView
                android:id="@+id/tv_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:text="@string/name_end"
                android:textColor="#666666"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_endStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_end"
                android:gravity="fill_horizontal"
                android:textColor="#666666"
                android:textSize="10sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>